[package]
name = "prometheus"
version = "0.1.0"
edition = "2021"
# TODO
# command buffer for write only & multiple access (also frees WorldRegistry)
# PointList for pixels
# LineList for lines
# VertexInterface for shaders that procedurally generate meshes
## so to render things collect by VertexInterface.object_id();
# Provide default interface concrete types (from my test project)
# Current issue is shadow mapping

[dependencies]
# Rank 0 Dependencies
event_driver = { path = "./event_driver" }
small_derive_deref = "0.1.3"
small_read_only = "0.1.0"
small_iter_fields = "0.1.5"
# Rank 1 Dependencies
winit = "0.30.8"
wgpu = "24.0.1"
hecs = "0.10.5"
cgmath = "0.18.0"
# Rank 2 Dependencies
log = "0.4.25"
env_logger = "0.11.6"
pollster = "0.4.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
itertools = "0.14.0"
anyhow = "1.0.95"
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg"] }
# Rank 3 Dependencies
ordered-float = "4.6.0" 


# Rank 0: Created in-house but separate from the main crate
# Rank 1: Vital to the crates creation, requires a lot of effort to replace it in-house
# Rank 2: Non-vital to the crates creation, requires unnecessary effort to replace it in-house
# Rank 3: Non-vital to the crates creation, requires minimal, but unnecessary effort to replace it in-house